# SelectiveCalling

./: .gitignore  CHANGELOG.md  README.md  SelectiveFlowGraph.grc  SelectiveFlowGraphSDR.grc  SelectiveFlowGraphSDR.py  SelectiveFlowGraphUHD.grc  SelectiveFlowGraphUHD.py
gr-selcal/: CMakeLists.txt  MANIFEST.yml
gr-selcal/.conda/: README.md
gr-selcal/.conda/recipe/: meta.yaml
gr-selcal/apps/: CMakeLists.txt
gr-selcal/cmake/Modules/: gnuradio-selcalConfig.cmake
gr-selcal/docs/: CMakeLists.txt  README.selcal
gr-selcal/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-selcal/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-selcal/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-selcal/examples/: CMakeLists.txt
gr-selcal/grc/: CMakeLists.txt  selcal_selcal_decoder.block.yml  selcal_selcall_decoder.block.yml
gr-selcal/include/gnuradio/selcal/: CMakeLists.txt  api.h
gr-selcal/python/selcal/: CMakeLists.txt  SelectiveCalling.py  __init__.py  qa_selcall_decoder.py  selcal_decoder.py  selcall_decoder.py
gr-selcal/python/selcal/bindings/: CMakeLists.txt  python_bindings.cc
src/: ccir-decodifica.py  ccir_gp.py  decode_parametrizzato.py  selettive.py  temp_decode.py
src/core/: SelectiveCalling.py
src/protocolli/: CCIR.py  ZVEI.py
